# FalloutRL

./: pyproject.toml
src/falloutrl/: __main__.py  color.py  engine.py  game_map.py  tiles.py
src/falloutrl/actions/: action.py
src/falloutrl/input_handlers/: event_handler.py
src/falloutrl/procgen/: rectangular_room.py
src/falloutrl/ui/: message_log.py
